--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/plots": "^2.3.3",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.5.1",
     "@tinymce/tinymce-react": "^5.1.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "antd": "^5.23.4",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
@@ -18,6 +20,7 @@
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.16.0",
     "tinymce": "^7.6.1",
+    "usehooks-ts": "^3.1.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
