--- a/nginx.conf
+++ b/nginx.conf
@@ -18,8 +18,8 @@ server {
     listen 443 ssl;
     server_name _;
 
-    ssl_certificate     /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    ssl_certificate     /etc/nginx/ssl/certificate.crt;
+    ssl_certificate_key /etc/nginx/ssl/private.key;
 
     location / {
         root   /usr/share/nginx/html;
