--- a/nginx.conf
+++ b/nginx.conf
@@ -31,4 +31,13 @@ server {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
+
+    location /api/ {
+    proxy_pass http://backend_yourlife:3001/api/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
 }
+}
+
